Add setup instructions back

--- a/workshops.html
+++ b/workshops.html
@@ -190,10 +190,23 @@
                 </div>
                 <p class="host">Hosted by Maeve Farley '24</p>
                 <p>Come learn the basics of Java, one of the most used programming languages! The fundamentals of Java will be taught before applying them to some practice problems. </p>
-                <button class="neutral collapse centered inactive">
-                    Setup instructions coming soon
+                <button class="neutral collapse centered">
+                    Setup instructions
                 </button>
                 <div class="instructions">
+                    <ul class="setup">
+                        <li>
+                            <p>
+                                Visit <a class="contact-link" href="https://codingbat.com/java">https://codingbat.com/java</a>
+                            </p>
+                        </li>
+                        <li>
+                            <p>Click create new account in top right hand corner (unless you already have an account)</p>
+                        </li> 
+                        <li>
+                            <p>Use preferred email and create a password</p>
+                        </li>
+                    </ul>
                 </div>
             </li>
             <li>
@@ -292,6 +305,9 @@
                             </p>
                         </li>
                         <li>
+                            <p>Install Git: <a href="https://git-scm.com/">https://git-scm.com/</a></p>
+                        </li>
+                        <li>
                             <p>Clone the <a href="https://github.com/techimmersionweek22/JS-Basics-Workshop">JS-Basics-Worshop repository</a> wherever you would like. It contains some start code.</p>
                             <p>Ex to clone the repo to your desktop:</p>  
                             <code>
@@ -325,10 +341,21 @@
                         </p>
                     </li>
                 </ul>
-                <button class="neutral collapse centered inactive">
-                    Setup instructions coming soon
+                <button class="neutral collapse centered">
+                    Setup instructions
                 </button>
                 <div class="instructions">
+                    <ul class="setup">
+                        <li>
+                            <p>Create a GitHub account: <a href="https://github.com/">https://github.com/</a></p>
+                        </li> 
+                        <li>
+                            <p>Install Git: <a href="https://git-scm.com/">https://git-scm.com/</a></p>
+                        </li>
+                        <li>
+                            <p>Install VS Code: <a href="https://code.visualstudio.com">https://code.visualstudio.com</a></p>
+                        </li>
+                    </ul>
                 </div>
             </li>
             <li>
@@ -351,10 +378,18 @@
                         </p>
                     </li>
                 </ul>
-                <button class="neutral collapse centered inactive">
-                    Setup instructions coming soon
+                <button class="neutral collapse centered">
+                    Setup instructions
                 </button>
                 <div class="instructions">
+                    <ol class="setup">
+                        <li>
+                            <p>Install Node JS: <a class="contact-link" href="https://nodejs.org/en/download/">https://nodejs.org/en/download/</a></p>
+                        </li> 
+                        <li>
+                            <p>Install VS Code: <a class="contact-link" href="https://code.visualstudio.com">https://code.visualstudio.com</a></p>
+                        </li>
+                    </ol>
                 </div>
             </li>
             <li>
