--- a/workshops.html
+++ b/workshops.html
@@ -99,11 +99,6 @@
                     <p class="time">Monday, March 28th, 7-8 PM</p>
                 </div>
                 <p class="host">Hosted by Thanh Dang '25, Taz Syed '22</p>
-                <button class="neutral collapse centered inactive">
-                    Setup instructions coming soon
-                </button>
-                <div class="instructions">
-                </div>
                 
             </li>
             <li>
@@ -127,11 +122,6 @@
                 </div>
                 <p class="host">Hosted by Alex Ng '22</p>
                 <p>Networking has become almost necessary to get a foot in the door to high-demand roles in industries like tech, finance, and consulting. Learn best practices regarding networking to land your dream job!</p>
-                <button class="neutral collapse centered inactive">
-                    Setup instructions coming soon
-                </button>
-                <div class="instructions">
-                </div>
             </li>
             <li>
                 <div id="blockchain-details" class="workshop-title-time">
@@ -140,11 +130,6 @@
                 </div>
                 <p class="host">Hosted by Alex Ng '22</p>
                 <p>Blockchain is an emerging technology that has seen rapid growth and demand in recent years. This workshop will cover the technicals of what the blockchain is and offer a discussion on its potential.</p>
-                <button class="neutral collapse centered inactive">
-                    Setup instructions coming soon
-                </button>
-                <div class="instructions">
-                </div>
             </li>
             <li>
                 <div id="python-details" class="workshop-title-time">
@@ -177,6 +162,7 @@
                     <p class="time">Tuesday, April 5th, 6-7 PM</p>
                 </div>
                 <p class="host">Hosted by Zach Birenbaum '22</p>
+                <p>This workshop will cover important skills for working at the command line locally, or on a remote server, including navigation, file editing, writing and using basic scripts, building applications and more.</p>
                 <button class="neutral collapse centered inactive">
                     Setup instructions coming soon
                 </button>
@@ -228,11 +214,6 @@
                 </div>
                 <p class="host">Hosted by Josiah Paintsil '23</p>
                 <p>The No-Code tools workshop is an interactive workshop where we will learn how to use popular No-Code tools to create an app, handle a database, establish automation, and deploy that app. </p>
-                <button class="neutral collapse centered inactive">
-                    Setup instructions coming soon
-                </button>
-                <div class="instructions">
-                </div>
             </li>
         </ul>
 
@@ -398,6 +379,7 @@
                     <p class="time">Friday, April 1st, 7-8 PM</p>
                 </div>
                 <p class="host">Hosted by Zach Birenbaum '22</p>
+                <p>This workshop will cover the necessary topics for someone to be able to make quality contributions to open source. Topics will include intermediate git functionality, choosing projects to contribute to, determining features to implement, guidelines for working in open source, and an interactive activity.</p>
             
             </li>
             <li>
