--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
 									<a href="keynote.html" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/keynote.png" alt=""></a>
 								</article>
 
+								<article class="item thumb span-3">
+									<h2>Google Calendar</h2>
+									<a href="https://calendar.google.com/calendar/embed?src=c_08dkubkf4autve5pe7bjudapnk%40group.calendar.google.com&ctz=America%2FNew_York" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/calendar.png" alt=""></a>
+								</article>
+
 							</div>
 
 					</section>
