--- a/schedule.html
+++ b/schedule.html
@@ -13,6 +13,7 @@
         <header class="popup-header">
             <h1>Schedule</h1>
         </header>
+        <p>Events are available in a Google Calendar format as well. To add the Colgate Technology Immersion Week calendar to your own account, visit this <a href="https://calendar.google.com/calendar/u/0?cid=Y19vN2ViNDlhMW9zZTRjaTgycWgzZmxwZW9mNEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t" target="_top">link</a>. To add individual events, see the <a href="https://calendar.google.com/calendar/embed?src=c_08dkubkf4autve5pe7bjudapnk%40group.calendar.google.com&ctz=America%2FNew_York">Google Calendar tab</a>.</p>
         <h2>Monday, March 28th</h2>
         <ul>
             <li>
