--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 								<article class="item thumb span-3">
 									<h2>Google Calendar</h2>
-									<a href="https://calendar.google.com/calendar/embed?src=c_08dkubkf4autve5pe7bjudapnk%40group.calendar.google.com&ctz=America%2FNew_York" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/calendar.png" alt=""></a>
+									<a href="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FNew_York&mode=WEEK&src=Y18wOGRrdWJrZjRhdXR2ZTVwZTdianVkYXBua0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=Y29sZ2F0ZS5lZHVfY2xhc3Nyb29tZDA5MmI0NTRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&src=Y19jbGFzc3Jvb201OGRlMmI4ZEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=cm8udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t" data-poptrox="iframe,1200x800" class="image"><img src="images/thumbs/calendar.png" alt=""></a>
 								</article>
 
 							</div>
