Add materials to webdev

--- a/workshops.html
+++ b/workshops.html
@@ -90,7 +90,46 @@
                             </p>
                             <img src="images/workshop_images/webdev3.png">
                         </li>
+                        <li>
+                            <p>
+                                Optionally, follow along with the "complete" code <a href="https://github.com/techimmersionweek22/Demo-Personal-Site">here</a>.
+                                You can look through the files and copy and paste into your own files or clone (copy, basically) the entire repository (all of the files) to your computer.
+                            </p>
+                            <p>Ex to clone the repo to your desktop: (type these in a terminal, but do not include the $ symbol, that indicates you should be typing the following code in a terminal or command line)</p>  
+                            <code>
+                                $ cd Desktop
+                            </code>
+                            <code>
+                                $ git clone https://github.com/techimmersionweek22/Demo-Personal-Site.git
+                            </code>
+                            <p><a href="https://www.tutorialspoint.com/how-to-clone-a-github-repository">Here's an article</a> with some more detail.</p>
+                        </li>
                     </ol>
+                </div>
+                <button class="neutral collapse centered">
+                    Recording and other materials
+                </button>
+                <div class="instructions">
+                    <ul>
+                        <li>
+                            <p>
+                                <a href="https://docs.google.com/presentation/d/1Dg-1ckYMn0jE3ed6bapO6RUFYbbt01tArSaTzCV9QQ4/edit?usp=sharing" target="_blank">Open presentation slides in Google slides</a>
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <a href="assets/other_files/Web Development Basics.pdf" download="">Download presentation slides as PDF</a>
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <a href="https://github.com/techimmersionweek22/Demo-Personal-Site">
+                                    "Complete" demo site repository
+                                </a>   
+                            </p>
+                        </li>
+                    </ul>
+
                 </div>
             </li>
             <li>
