Add instrs to web dev

--- a/workshops.html
+++ b/workshops.html
@@ -91,9 +91,13 @@
                             <img src="images/workshop_images/webdev3.png">
                         </li>
                         <li>
+                            <p>Create a GitHub account: <a href="https://github.com/">https://github.com/</a></p>
+                        </li>
+                        <li>
                             <p>
-                                Optionally, follow along with the "complete" code <a href="https://github.com/techimmersionweek22/Demo-Personal-Site">here</a>.
-                                You can look through the files and copy and paste into your own files or clone (copy, basically) the entire repository (all of the files) to your computer.
+                                Follow along with the "complete" code <a href="https://github.com/techimmersionweek22/Demo-Personal-Site">here</a>.
+                                You can look through the files and copy and paste into your own files or clone (copy, basically) the entire repository (all of the files) to your computer. We 
+                                will also go over this part in the demo, but feel free to clone it on your own time as well.
                             </p>
                             <p>Ex to clone the repo to your desktop: (type these in a terminal, but do not include the $ symbol, that indicates you should be typing the following code in a terminal or command line)</p>  
                             <code>
