Add to JS workshop

--- a/workshops.html
+++ b/workshops.html
@@ -133,7 +133,6 @@
                             </p>
                         </li>
                     </ul>
-
                 </div>
             </li>
             <li>
@@ -343,6 +342,16 @@
                             <p>If you use https instead of ssh to clone the repo as seen in the example above you will need to log in to your Github account as directed after you paste the above code.</p>
                         </li>
                     </ol>
+                </div>
+                <button class="neutral collapse centered">
+                    Recording and other materials
+                </button>
+                <div class="instructions">
+                    <ul>
+                        <li><p>
+                            <a href="https://colab.research.google.com/drive/1cc21op3KzKDN0FWEicJHn0JzRz7PwwAk?usp=sharing">Intro To JavaScript Jupyter Notebook</a>
+                        </p></li>
+                    </ul>
                 </div>
             </li>
             <li>
