--- a/alumnipanels.html
+++ b/alumnipanels.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html class="popup">
 	<head>
 		<title>Colgate Technology Immersion Week 2022 - Alumni Panels</title>
 		<meta charset="utf-8" />
@@ -20,9 +20,22 @@
                     <h3>Software Engineering Best Practices </h3>
                     <p class="time">Tuesday, March 29th, 8-9 PM</p>
                 </div>
+                <button class="neutral collapse centered">
+                    Recording and other materials
+                </button>
+                <div class="instructions">
+                    <ul>
+                        <li>
+                            <p>
+                                <a href="https://youtu.be/P0M2JgN59zI" target="_blank">Recording</a>
+                            </p>
+                        </li>
+                    </ul>
+                </div>
                 <p>Interested in a career in software engineering? About to start a software engineering job/internship and are unsure what to expect? Come and meet Colgate alumni who are now working in this field and ask any questions you might have in this Q&A-style panel!</p>
                 <p class="host">Hosted by alumni:</p>
                 <img class="panel-img" src="images/alumni/panel1.png" alt="">
+                
             </li>
             <li>
                 <div class="workshop-title-time">
@@ -44,5 +57,6 @@
         <script src="assets/js/breakpoints.min.js"></script>
         <script src="assets/js/util.js"></script>
         <script src="assets/js/main.js"></script>
+        <script src="assets/js/onpopups.js"></script>
 	</body>
 </html>
