--- a/keynote.html
+++ b/keynote.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html class="keynote"   >
+<html class="keynote" >
 	<head>
 		<title>Colgate Technology Immersion Week 2022 - Keynote Speakers</title>
 		<meta charset="utf-8" />
@@ -17,6 +17,18 @@
         <h2>Big data, small satellites: mapping landscape response to climate change</h3>
         <p class="time">Tuesday, March 29th, 11:20 AM - 12:20 PM</p>
         <p class="host">Hosted by Dr. Joanmarie Del Vecchio, Postdoctoral Fellow, Neukom Institute for Computational Science, Dartmouth College, Hanover, NH</p>
+        <button class="neutral collapse centered">
+            Recording and other materials
+        </button>
+        <div class="instructions">
+            <ul>
+                <li>
+                    <p>
+                        <a href="https://youtu.be/Nm_vXmXfQlo" target="_blank">Recording</a>
+                    </p>
+                </li>
+            </ul>
+        </div>
         <div class="keynote-photo-bio">
             <img class="guest-image" src="images/keynotes/joanmarie_del_vecchio.jpeg">
             <h3>ABSTRACT: </h3>
@@ -51,5 +63,6 @@
         <script src="assets/js/breakpoints.min.js"></script>
         <script src="assets/js/util.js"></script>
         <script src="assets/js/main.js"></script>
+        <script src="assets/js/onpopups.js"></script>
 	</body>
 </html>
