--- a/workshops.html
+++ b/workshops.html
@@ -117,6 +117,11 @@
                     <ul>
                         <li>
                             <p>
+                                <a href="https://youtu.be/C15UkWl7Z_U" target="_blank">Recording</a>
+                            </p>
+                        </li>
+                        <li>
+                            <p>
                                 <a href="https://docs.google.com/presentation/d/1Dg-1ckYMn0jE3ed6bapO6RUFYbbt01tArSaTzCV9QQ4/edit?usp=sharing" target="_blank">Open presentation slides in Google slides</a>
                             </p>
                         </li>
@@ -142,6 +147,18 @@
                 </div>
                 <p class="host">Hosted by Thanh Dang '25, Taz Syed '22</p>
                 <p>Technically, you can write code on Microsoft Excel — but that doesn’t mean you have to. Learn about the most popular development tools and how they can help you write correct and maintainable code.</p>
+                <button class="neutral collapse centered">
+                    Recording and other materials
+                </button>
+                <div class="instructions">
+                    <ul>
+                        <li>
+                            <p>
+                                <a href="https://youtu.be/NLcQQZauu3o" target="_blank">Recording</a>
+                            </p>
+                        </li>
+                    </ul>
+                </div>
             </li>
             <li>
                 <div id="data-science-details" class="workshop-title-time">
@@ -282,10 +299,17 @@
                         </p>
                     </li>
                 </ul>
-                <button class="neutral collapse centered inactive">
-                    Setup instructions coming soon
+                <button class="neutral collapse centered">
+                    Recording and other materials
                 </button>
                 <div class="instructions">
+                    <ul>
+                        <li>
+                            <p>
+                                <a href="https://youtu.be/z4YF1BZNX-c" target="_blank">Recording</a>
+                            </p>
+                        </li>
+                    </ul>
                 </div>
             </li>
             <li>
