--- a/workshops.html
+++ b/workshops.html
@@ -168,10 +168,27 @@
                 <p class="host">Hosted by Taz Syed '22</p>
                 <p>Data science is one of the most popular fields today, and almost every programmer will have to wrangle with data one way or another. Learn how to solve a data problem from start to finish, and see if statistical analysis is for you!
                 </p>
-                <button class="neutral collapse centered inactive">
-                    Setup instructions coming soon
+                <button class="neutral collapse centered">
+                    Setup instructions
                 </button>
                 <div class="instructions">
+                    <ul>
+                        <li><p>
+                            <a href="https://docs.google.com/document/d/11mAvKW5ce8YdO_RZEOKhMdnLwUzxJ8t_TiBLqvMOOIg/edit?usp=sharing">Setup Instructions</a>
+                        </p></li>
+                    </ul>
+                </div>
+                <button class="neutral collapse centered">
+                    Recording and other materials
+                </button>
+                <div class="instructions">
+                    <ul>
+                        <li>
+                            <p>
+                                <a href="https://youtu.be/Lzvcuo4iR70" target="_blank">Recording</a>
+                            </p>
+                        </li>
+                    </ul>
                 </div>
             </li>
             <li>
@@ -372,6 +389,11 @@
                 </button>
                 <div class="instructions">
                     <ul>
+                        <li>
+                            <p>
+                                <a href="https://youtu.be/Lzvcuo4iR70" target="_blank">Recording</a>
+                            </p>
+                        </li>
                         <li><p>
                             <a href="https://colab.research.google.com/drive/1cc21op3KzKDN0FWEicJHn0JzRz7PwwAk?usp=sharing">Intro To JavaScript Jupyter Notebook</a>
                         </p></li>
@@ -411,6 +433,18 @@
                         </li>
                         <li>
                             <p>Install VS Code: <a href="https://code.visualstudio.com">https://code.visualstudio.com</a></p>
+                        </li>
+                    </ul>
+                </div>
+                <button class="neutral collapse centered">
+                    Recording and other materials
+                </button>
+                <div class="instructions">
+                    <ul>
+                        <li>
+                            <p>
+                                <a href="https://youtu.be/-Jra38l_bko" target="_blank">Recording</a>
+                            </p>
                         </li>
                     </ul>
                 </div>
