--- a/workshops.html
+++ b/workshops.html
@@ -185,7 +185,7 @@
                     <ul>
                         <li>
                             <p>
-                                <a href="https://youtu.be/Lzvcuo4iR70" target="_blank">Recording</a>
+                                <a href="https://youtu.be/y6WKOFUsrGA" target="_blank">Recording</a>
                             </p>
                         </li>
                     </ul>
