--- a/alumnipanels.html
+++ b/alumnipanels.html
@@ -42,6 +42,18 @@
                     <h3>Non-Technical Roles in Tech</h3>
                     <p class="time">Thursday, March 31st, 7-8 PM</p>
                 </div>
+                <button class="neutral collapse centered">
+                    Recording and other materials
+                </button>
+                <div class="instructions">
+                    <ul>
+                        <li>
+                            <p>
+                                <a href="https://youtu.be/yD1wvFK2wys" target="_blank">Recording</a>
+                            </p>
+                        </li>
+                    </ul>
+                </div>
                 <p>What else is out there for non-engineers in the field of technology? Come and meet Colgate alumni working in diverse, non-technical roles at some of the largest tech companies! </p>
                 <p class="host">Hosted by alumni: </p>
                 <img class="panel-img" src="images/alumni/panel2.png" alt="">
