--- a/workshops.html
+++ b/workshops.html
@@ -482,6 +482,18 @@
                         </li>
                     </ol>
                 </div>
+                <button class="neutral collapse centered">
+                    Recording and other materials
+                </button>
+                <div class="instructions">
+                    <ul>
+                        <li>
+                            <p>
+                                <a href="https://youtu.be/ZP4DCOwI2BA" target="_blank">Recording</a>
+                            </p>
+                        </li>
+                    </ul>
+                </div>
             </li>
             <li>
                 <div id="open-source-details" class="workshop-title-time">
