--- a/workshops.html
+++ b/workshops.html
@@ -502,7 +502,19 @@
                 </div>
                 <p class="host">Hosted by Zach Birenbaum '22</p>
                 <p>This workshop will cover the necessary topics for someone to be able to make quality contributions to open source. Topics will include intermediate git functionality, choosing projects to contribute to, determining features to implement, guidelines for working in open source, and an interactive activity.</p>
-            
+                <button class="neutral collapse centered">
+                    Setup instructions
+                </button>
+                <div class="instructions">
+                    <ul class="setup">
+                        <li>
+                            <p>Create a GitHub account: <a href="https://github.com/">https://github.com/</a></p>
+                        </li> 
+                        <li>
+                            <p>Install Git: <a href="https://git-scm.com/">https://git-scm.com/</a></p>
+                        </li>
+                    </ul>
+                </div>
             </li>
             <li>
                 <div id="unit-testing-details" class="workshop-title-time">
