--- a/workshops.html
+++ b/workshops.html
@@ -197,6 +197,28 @@
                     <p class="time">Friday, April 1st, 6-7 PM</p>
                 </div>
                 <p class="host">Hosted by Alex Ng '22</p>
+                <button class="neutral collapse centered">
+                    Recording and other materials
+                </button>
+                <div class="instructions">
+                    <ul>
+                        <li>
+                            <p>
+                                <a href="https://youtu.be/vz-_89yTTXA" target="_blank">Recording</a>
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <a href="https://docs.google.com/presentation/d/1wEHvPt0UZvVveNgSCgPORLrSxzpLbmoK/edit?usp=sharing&ouid=104661200335124948595&rtpof=true&sd=true" target="_blank">Presentation Slides</a>
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <a href="https://docs.google.com/spreadsheets/d/1odVVboIOBLJA9Q8LIU8IHLIAY8cjYVIG/edit?usp=sharing&ouid=104661200335124948595&rtpof=true&sd=true" target="_blank">Networking Tracker Spreadsheet</a>
+                            </p>
+                        </li>
+                    </ul>
+                </div>
                 <p>Networking has become almost necessary to get a foot in the door to high-demand roles in industries like tech, finance, and consulting. Learn best practices regarding networking to land your dream job!</p>
             </li>
             <li>
@@ -515,6 +537,18 @@
                         </li>
                     </ul>
                 </div>
+                <button class="neutral collapse centered">
+                    Recording and other materials
+                </button>
+                <div class="instructions">
+                    <ul>
+                        <li>
+                            <p>
+                                <a href="https://youtu.be/D9GquEsiyLY" target="_blank">Recording</a>
+                            </p>
+                        </li>
+                    </ul>
+                </div>
             </li>
             <li>
                 <div id="unit-testing-details" class="workshop-title-time">
@@ -531,10 +565,18 @@
                         </p>
                     </li>
                 </ul>
-                <button class="neutral collapse centered inactive">
-                    Setup instructions coming soon
+                <button class="neutral collapse centered">
+                    Setup instructions
                 </button>
                 <div class="instructions">
+                    <ul class="setup">
+                        <li>
+                            <p>Download Python (if you don't already have it): <a href="https://www.python.org/downloads/" target="_blank">https://www.python.org/downloads/</a></p>
+                        </li> 
+                        <li>
+                            <p>Install Git: <a href="https://git-scm.com/" target="_blank">https://git-scm.com/</a></p>
+                        </li>
+                    </ul>
                 </div>
             </li>
             <li>
