--- a/keynote.html
+++ b/keynote.html
@@ -42,6 +42,18 @@
             systems)?</h3>
         <p class="time">Saturday, April 2nd, 12-1 PM</p>
         <p class="host">Hosted by Dr. Leon Reznik, Professor of Computer Science at Rochester Institute of Technology, New York, USA</p>
+        <button class="neutral collapse centered">
+            Recording and other materials
+        </button>
+        <div class="instructions">
+            <ul>
+                <li>
+                    <p>
+                        <a href="https://youtu.be/GWK3Y2Ziqio" target="_blank">Recording</a>
+                    </p>
+                </li>
+            </ul>
+        </div>
         <div class="keynote-photo-bio">
             <img class="guest-image" src="images/keynotes/leon_reznik.jpeg">
             <h3>ABSTRACT: </h3>
