--- a/workshops.html
+++ b/workshops.html
@@ -227,6 +227,18 @@
                     <p class="time">Sunday, April 3rd, 5-6 PM</p>
                 </div>
                 <p class="host">Hosted by Alex Ng '22</p>
+                <button class="neutral collapse centered">
+                    Recording and other materials
+                </button>
+                <div class="instructions">
+                    <ul>
+                        <li>
+                            <p>
+                                <a href="https://youtu.be/ffoKvNg4Lpk" target="_blank">Recording</a>
+                            </p>
+                        </li>
+                    </ul>
+                </div>
                 <p>Blockchain is an emerging technology that has seen rapid growth and demand in recent years. This workshop will cover the technicals of what the blockchain is and offer a discussion on its potential.</p>
             </li>
             <li>
@@ -235,10 +247,17 @@
                     <p class="time">Sunday, April 3rd, 6-7 PM</p>
                 </div>
                 <p class="host">Hosted by Honorine Kwizera '24</p>
-                <button class="neutral collapse centered inactive">
-                    Setup instructions coming soon
+                <button class="neutral collapse centered">
+                    Recording and other materials
                 </button>
                 <div class="instructions">
+                    <ul>
+                        <li>
+                            <p>
+                                <a href="https://youtu.be/5Qcm-kNbrU0" target="_blank">Recording</a>
+                            </p>
+                        </li>
+                    </ul>
                 </div>
             </li>
             <li>
@@ -610,6 +629,18 @@
                     <p class="time">Saturday, April 2nd, 7-8 PM</p>
                 </div>
                 <p class="host">Hosted by Taz Syed '22</p>
+                <button class="neutral collapse centered">
+                    Recording and other materials
+                </button>
+                <div class="instructions">
+                    <ul>
+                        <li>
+                            <p>
+                                <a href="https://youtu.be/iHLdlNSqXfE" target="_blank">Recording</a>
+                            </p>
+                        </li>
+                    </ul>
+                </div>
                 <p>How many times has your program crashed due to a null pointer exception or a runtime error? Learn a functional programming language that maps much closer to the way humans naturally think, and ensures that if your program compiles then it works.</p>
                 <h4>Required Experience:</h4>
                 <ul>
@@ -619,11 +650,6 @@
                         </p>
                     </li>
                 </ul>
-                <button class="neutral collapse centered inactive">
-                    Setup instructions coming soon
-                </button>
-                <div class="instructions">
-                </div>
             </li>
             <li>
                 <div id="spa-details" class="workshop-title-time">
