--- a/workshops.html
+++ b/workshops.html
@@ -590,10 +590,16 @@
                 <div class="instructions">
                     <ul class="setup">
                         <li>
-                            <p>Download Python (if you don't already have it): <a href="https://www.python.org/downloads/" target="_blank">https://www.python.org/downloads/</a></p>
+                            <p>Download Python: <a href="https://www.python.org/downloads/" target="_blank">https://www.python.org/downloads/</a></p>
                         </li> 
                         <li>
                             <p>Install Git: <a href="https://git-scm.com/" target="_blank">https://git-scm.com/</a></p>
+                        </li>
+                        <li>
+                            <p>Create a GitHub account: <a href="https://github.com/" target="_blank">https://github.com/</a></p>
+                        </li>
+                        <li>
+                            <p>Clone this repository: <a href="https://github.com/techimmersionweek22/Unit-Testing.git" target="_blank">https://github.com/techimmersionweek22/Unit-Testing.git</a></p>
                         </li>
                     </ul>
                 </div>
