Add setup instructions for part three of workshop

--- a/workshops.html
+++ b/workshops.html
@@ -682,10 +682,11 @@
                         </p>
                     </li>
                 </ul>
-                <button class="neutral collapse centered inactive">
-                    Setup instructions coming soon
+                <button class="neutral collapse centered">
+                    Setup instructions
                 </button>
                 <div class="instructions">
+                    <p>Clone <a target="_blank" href="https://github.com/techimmersionweek22/Demo-To-Do-SPA">the repository</a> that has our progress up to this point.</p>
                 </div>
             </li>
         </ul>
