--- a/workshops.html
+++ b/workshops.html
@@ -267,10 +267,17 @@
                 </div>
                 <p class="host">Hosted by Josiah Paintsil '23</p>
                 <p>The GitHub 101 workshop will be an interactive workshop where we go over all the basics of GitHub. We will go over how to use GitHub for personal use, collaborative use, review some helpful commands, and practice some useful yet advanced techniques. </p>
-                <button class="neutral collapse centered inactive">
-                    Setup instructions coming soon
+                <button class="neutral collapse centered">
+                    Recording and other materials
                 </button>
                 <div class="instructions">
+                    <ul>
+                        <li>
+                            <p>
+                                <a href="https://youtu.be/ErBlLb8X3Sw" target="_blank">Recording</a>
+                            </p>
+                        </li>
+                    </ul>
                 </div>
             </li>
             <li>
@@ -280,10 +287,17 @@
                 </div>
                 <p class="host">Hosted by Zach Birenbaum '22</p>
                 <p>This workshop will cover important skills for working at the command line locally, or on a remote server, including navigation, file editing, writing and using basic scripts, building applications and more.</p>
-                <button class="neutral collapse centered inactive">
-                    Setup instructions coming soon
+                <button class="neutral collapse centered">
+                    Recording and other materials
                 </button>
                 <div class="instructions">
+                    <ul>
+                        <li>
+                            <p>
+                                <a href="https://youtu.be/NqcaKQLM1Cg" target="_blank">Recording</a>
+                            </p>
+                        </li>
+                    </ul>
                 </div>
             </li>
             <li>
@@ -308,6 +322,18 @@
                         </li> 
                         <li>
                             <p>Use preferred email and create a password</p>
+                        </li>
+                    </ul>
+                </div>
+                <button class="neutral collapse centered">
+                    Recording and other materials
+                </button>
+                <div class="instructions">
+                    <ul>
+                        <li>
+                            <p>
+                                <a href="https://youtu.be/iri_Swy27Zo" target="_blank">Recording</a>
+                            </p>
                         </li>
                     </ul>
                 </div>
@@ -600,6 +626,18 @@
                         </li>
                         <li>
                             <p>Clone this repository: <a href="https://github.com/techimmersionweek22/Unit-Testing.git" target="_blank">https://github.com/techimmersionweek22/Unit-Testing.git</a></p>
+                        </li>
+                    </ul>
+                </div>
+                <button class="neutral collapse centered">
+                    Recording and other materials
+                </button>
+                <div class="instructions">
+                    <ul>
+                        <li>
+                            <p>
+                                <a href="https://youtu.be/Vg8MYqGkSxw" target="_blank">Recording</a>
+                            </p>
                         </li>
                     </ul>
                 </div>
